--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "dotenv": "^16.0.1",
     "gatsby": "^4.18.2",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-plugin-emotion": "^7.18.0",
     "gatsby-plugin-gatsby-cloud": "^4.18.1",
     "gatsby-plugin-image": "^2.18.1",
     "gatsby-plugin-manifest": "^4.18.1",
@@ -13,11 +18,13 @@
     "gatsby-plugin-react-helmet": "^5.18.0",
     "gatsby-plugin-sharp": "^4.18.1",
     "gatsby-source-filesystem": "^4.18.1",
+    "gatsby-source-strapi": "^2.0.0",
     "gatsby-transformer-sharp": "^4.18.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "url-slug": "^3.0.4"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
